[package]
name = "test_fault_server"
version = "0.1.0"
authors = ["Alexey Belyakov <qqrm@vivaldi.net>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", default-features = false, features = ["json"] }
serde = {version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
nanoid = "0.3.0"
serde_derive = "1.0.118"
chashmap = "2.2.2"
lazy_static = "1.4.0"
envmnt = "0.8.4"
global = "0.4.3"
reqwest = { version = "0.10.10", features = ["json"] }
tokio = { version = "0.3.6", features = ["full"] }
tokio-timer = "0.2.13"
futures = { version = "0.3.8", default-features = false }